tests/errors/compiler/aster_not_for_pointer/aster_for_array.c
int main() 
{	
	int arr[10];
	int a;
	a = *arr[1];
	//hjk //нужно раскоментить чтобы код дальнейший читался корректно
	return 0;
}